--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   },
   "require": {
     "php": ">=5.5",
-    "symfony/process": "^3.1",
+    "symfony/process": "*",
     "psr/log": "^1.0"
   },
   "require-dev": {
