--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     "symfony/process": "*",
     "psr/log": "^1.0"
   },
+  "minimum-stability": "dev",
   "require-dev": {
     "phpunit/phpunit": "^4.0"
   }
